[gd_scene load_steps=7 format=3 uid="uid://bddkg4ij7obfd"]

[ext_resource type="Script" uid="uid://bbcibjdsg3que" path="res://Scenes/in_game_menu/in_game_menu.gd" id="1_5crhr"]
[ext_resource type="Texture2D" uid="uid://cyx22bpp2lffm" path="res://Assets/Art/Background color.png" id="2_xtv56"]
[ext_resource type="FontFile" uid="uid://q1kfaq4hjaog" path="res://Assets/Fonts/ThaleahFat.ttf" id="3_n0mag"]
[ext_resource type="PackedScene" uid="uid://cwaoa1d7sc0lk" path="res://Scenes/in_game_menu/shop.tscn" id="5_5tb02"]
[ext_resource type="PackedScene" uid="uid://cgfg26uaql0wr" path="res://Scenes/in_game_menu/options.tscn" id="6_gn025"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pyk8o"]
bg_color = Color(0.170734, 0.165545, 0.318081, 1)

[node name="InGameMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5crhr")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(575, 325)
texture = ExtResource("2_xtv56")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.34902, 0.396078, 0.803922, 0.576471)

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -200.0
offset_right = 150.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_pyk8o")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 20

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_n0mag")
theme_override_font_sizes/font_size = 50
text = "Paused"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Resume" type="Button" parent="PanelContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_n0mag")
theme_override_font_sizes/font_size = 20
text = "Resume"

[node name="Shop" type="Button" parent="PanelContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_n0mag")
theme_override_font_sizes/font_size = 20
text = "Shop"

[node name="Options" type="Button" parent="PanelContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_n0mag")
theme_override_font_sizes/font_size = 20
text = "Options"

[node name="LeaveGame" type="Button" parent="PanelContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_n0mag")
theme_override_font_sizes/font_size = 20
text = "Leave Game"

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("3_n0mag")
theme_override_font_sizes/font_size = 50
text = "          "
horizontal_alignment = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="Shop" parent="CanvasLayer" instance=ExtResource("5_5tb02")]

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="Options" parent="CanvasLayer2" instance=ExtResource("6_gn025")]

[connection signal="pressed" from="PanelContainer/VBoxContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/VBoxContainer/Shop" to="." method="_on_shop_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/VBoxContainer/LeaveGame" to="." method="_on_leave_game_pressed"]
